# socketspec

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  cursorrules  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  socketspec-implementation-plan.md  socketspec-project-context.md
.context/: CODING_STANDARDS.md
.context/v0.1.0/: SYSTEM.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
contributing/: index.html
contributing/new-adapter/: index.html
docs/: index.md  quickstart.md
docs/contributing/: index.md  new-adapter.md
docs/how-to/: fastapi.md  testing.md
docs/reference/: connection.md  socketapp.md
docs/tutorial/: first-event.md  payload-validation.md  rooms.md
examples/ai_streaming/: main.py
examples/fastapi_chat/: main.py
examples/fastapi_notifications/: main.py
how-to/fastapi/: index.html
how-to/testing/: index.html
quickstart/: index.html
reference/connection/: index.html
reference/socketapp/: index.html
search/: search_index.json
src/socketspec/: __init__.py  _version.py  app.py  connection.py  di.py  errors.py  manager.py  middleware.py  registry.py  rooms.py  router.py  session.py  testing.py  types.py
src/socketspec/adapters/: __init__.py  fastapi.py
src/socketspec/backends/: __init__.py  base.py  memory.py
src/socketspec/docs/: __init__.py  debug_router.py  engine.py  router.py
src/socketspec/docs/ui/: __init__.py  index.html  main.js  style.css
src/socketspec/security/: __init__.py  auth.py  origins.py  ratelimit.py
tests/: conftest.py
tests/adapters/: test_fastapi_adapter.py
tests/integration/: test_error_handling.py  test_event_flow.py  test_rooms.py
tests/unit/: test_app.py  test_coverage_gaps.py  test_di.py  test_docs.py  test_errors.py  test_manager.py  test_middleware.py  test_registry.py  test_rooms.py  test_router.py  test_session.py
tests/unit/backends/: test_memory.py
tests/unit/security/: test_auth.py  test_origins.py  test_ratelimit.py
tutorial/first-event/: index.html
tutorial/payload-validation/: index.html
tutorial/rooms/: index.html
