[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "socketspec"
version = "0.1.2"
description = "FastAPI-style WebSocket framework with built-in docs and testing"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Laiba Shahab", email = "its.laiba.shahab@email.com" }]
keywords = ["websocket", "fastapi", "async", "realtime", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.0",
    "anyio>=4.0",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
fastapi = ["fastapi>=0.100", "uvicorn>=0.29"]
django = ["django>=4.2"]
all = ["socketspec[redis,fastapi,django]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "towncrier>=23.0",
    "fastapi>=0.100",
    "uvicorn>=0.29",
]

[project.urls]
Homepage = "https://github.com/ByteCraftByLaiba/socketspec"
Documentation = "https://ByteCraftByLaiba.github.io/socketspec/"
Repository = "https://github.com/ByteCraftByLaiba/socketspec"
Issues = "https://github.com/ByteCraftByLaiba/socketspec/issues"
Changelog = "https://github.com/ByteCraftByLaiba/socketspec/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/socketspec"]

[tool.hatch.build.targets.sdist]
include = ["src/socketspec/docs/ui/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers -q"
python_classes = "*Tests"

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
packages = ["socketspec"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN"]

[tool.coverage.run]
source = ["src/socketspec"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.towncrier]
package = "socketspec"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changes"
